--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "mongo": "^0.1.0",
+    "mongodb": "^4.17.1",
+    "mongoose": "^7.6.2"
   }
 }
